# back/culture-service/src/routes/culture.routes.js
@@ -4,6 +4,7 @@ const controller = require('../controllers/culture.controller');
 
 router.get('/', controller.getAllCultures);
 router.post('/', controller.addCulture);
+router.get('/get-one/:culture_id', controller.getOneCultures);
 
 router.post('/calendar', controller.addCultureCalendar);
 router.get('/calendar/:region_id', controller.getCalendarByRegion);
