# back/recommandation-service/src/controllers/recommandation.controller.js
@@ -3,7 +3,14 @@ const Recommandation = require('../models/recommandation.model');
 exports.generateRecommandation = async (req, res) => {
   const { user_id, location_id, culture_id, date } = req.body;
 
-  const message = `À ${date}, nous recommandons la culture ${culture_id} pour la région ${location_id}.`; // Exemple basique
+  const dateObj = new Date(date);
+  const formattedDate = dateObj.toLocaleDateString('fr-FR', {
+    year: 'numeric',
+    month: 'long',
+    day: 'numeric'
+  });
+
+  const message = `Le ${formattedDate}, nous recommandons la culture ${culture_id} pour la région ${location_id}.`; // Exemple basique
 
   const reco = await Recommandation.create({
     user_id,
